--- a/packages/client/renderer/index.html
+++ b/packages/client/renderer/index.html
@@ -10,7 +10,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <h1>Hello world</h1>
-    <script src="./src/index.ts" type="module"></script>
+    <div id="universe-app"></div>
+    <script src="./src/index.tsx" type="module"></script>
   </body>
 </html>
